--- a/css/styles.css
+++ b/css/styles.css
@@ -56,6 +56,8 @@ ol {
   width: 1158px;
   padding: 0 15px;
   margin: 0 auto;
+  position: relative;
+  text-align: center;
 }
 
 /* HEADER*/
@@ -68,6 +70,7 @@ ol {
   display: flex;
   align-items: center;
   margin: 0 auto;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .page-navigation {
@@ -129,13 +132,30 @@ ol {
   font-size: 16px;
   color: var(--color-navy-blue);
   padding: 24px 0;
+  position: relative;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.menu-link.current {
+  color: var(--color-ocean);
+}
+
+.menu-link.current::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  width: 100%;
+  height: 4px;
+  background-color: var(--color-ocean);
+  border-radius: 2px;
 }
 
 .menu-link:hover,
 .menu-link:focus,
 .header-contact-link:hover,
 .header-contact-link:focus {
-  color: var(--color-ocean);
+ color: var(--color-ocean);
 }
 
 .menu-item:hover,
@@ -166,6 +186,7 @@ ol {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--color-slate);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* HERO SECTION */
@@ -173,9 +194,12 @@ ol {
   color: var(--color-white);
   background-color: var(--color-navy-blue-modal);
   padding: 188px 0;
-  background-image: url(..//images/hero-image.jpg);
+  background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero-image.jpg);
+  max-width: 1440px;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
-
 
 .hero-tittle {
   font-family: var(--main-font-family);
@@ -207,6 +231,7 @@ ol {
   border-radius: 4px;
   margin-left: auto;
   margin-right: auto;
+  transition:  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-open-btn:hover,
@@ -217,6 +242,16 @@ ol {
 /*FIRST SECTION*/
 .section-container {}
 
+.container-icon{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 112px;
+  background-color: var(--color-cloud);
+  border-radius: 4px;
+  border: 1px solid var(--color-light-slate);
+  margin-bottom: 8px;
+}
 .features {
   font-weight: 500;
   font-size: 20px;
