--- a/css/styles.css
+++ b/css/styles.css
@@ -378,6 +378,35 @@ ol {
   font-weight: 400;
 }
 
+.menu-social-list-icon{
+display: flex;
+justify-content: center;
+gap: 24px;
+}
+
+.social-icon{
+width: 40px;
+height: 40px;
+}
+
+.social-group{
+width: 100%;
+height: 100%;
+background-color: var(--color-iris);
+border-radius: 50%;
+display: flex;
+align-items: center;
+justify-content: center;
+}
+
+.social-group:hover,
+.social-group:focus {
+background-color: var(--color-ocean);
+}
+
+.social-list-icon{
+fill:var(--color-cloud)
+}
 /*THIRD SECTION*/
 .our-portfolio {
   color: var(--color-navy-blue);
@@ -416,6 +445,11 @@ ol {
   /*box-sizing: border-box;*/
 }
 
+.list-service:hover{
+ box-shadow:0px 1px 6px rgba(46, 47, 66, 0.08),
+  0px 1px 1px rgba(46, 47, 66, 0.16),
+  0px 2px 1px rgba(46, 47, 66, 0.08);
+}
 .project-link {
   display: block;
   width: 100%;
