--- a/css/styles.css
+++ b/css/styles.css
@@ -443,9 +443,10 @@ fill:var(--color-cloud)
 .list-service {
   width: calc((100% - 48px) / 3);
   /*box-sizing: border-box;*/
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.list-service:hover{
+.list-service:hover {
  box-shadow:0px 1px 6px rgba(46, 47, 66, 0.08),
   0px 1px 1px rgba(46, 47, 66, 0.16),
   0px 2px 1px rgba(46, 47, 66, 0.08);
@@ -478,6 +479,7 @@ fill:var(--color-cloud)
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--color-slate, #434455);
+  transform: translateY(0%);
 }
 
 /* FOOTER*/
