--- a/css/styles.css
+++ b/css/styles.css
@@ -454,6 +454,7 @@ fill:var(--color-cloud)
 
 .portfolio-img-container {
  position: relative;
+ position: relative;
  overflow: hidden;
 }
 
@@ -476,6 +477,10 @@ fill:var(--color-cloud)
   width: 100%;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.overlay:hover {
+  transform: translateY(0%);
 }
 
 .service-container {
@@ -502,9 +507,6 @@ fill:var(--color-cloud)
   color: var(--color-slate, #434455);
 }
 
-.portfolio-desk:hover{
- transform: translateY(0%);
-}
 
 /* FOOTER*/
 
