--- a/css/styles.css
+++ b/css/styles.css
@@ -64,13 +64,13 @@ ol {
 .page-header {
   margin: 0 auto;
   border-bottom: 1px solid var(--color-cornflower);
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .container-header {
   display: flex;
   align-items: center;
   margin: 0 auto;
-  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .page-navigation {
@@ -354,6 +354,9 @@ ol {
   border-radius: 0px 0px 4px 4px;
   width: calc((100% - 72px) / 4);
   box-sizing: border-box;
+  box-shadow:0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .img-container {
@@ -387,6 +390,7 @@ gap: 24px;
 .social-icon{
 width: 40px;
 height: 40px;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-group{
@@ -450,6 +454,7 @@ fill:var(--color-cloud)
  box-shadow:0px 1px 6px rgba(46, 47, 66, 0.08),
   0px 1px 1px rgba(46, 47, 66, 0.16),
   0px 2px 1px rgba(46, 47, 66, 0.08);
+  transform: translateY(0%);
 }
 
 .portfolio-img-container {
@@ -477,10 +482,6 @@ fill:var(--color-cloud)
   width: 100%;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.overlay:hover {
-  transform: translateY(0%);
 }
 
 .service-container {
