--- a/css/styles.css
+++ b/css/styles.css
@@ -390,7 +390,6 @@ gap: 24px;
 .social-icon{
 width: 40px;
 height: 40px;
-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-group{
@@ -401,6 +400,7 @@ border-radius: 50%;
 display: flex;
 align-items: center;
 justify-content: center;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-group:hover,
@@ -447,19 +447,22 @@ fill:var(--color-cloud)
 .list-service {
   width: calc((100% - 48px) / 3);
   /*box-sizing: border-box;*/
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+.list-service:hover {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.list-service:hover {
- box-shadow:0px 1px 6px rgba(46, 47, 66, 0.08),
-  0px 1px 1px rgba(46, 47, 66, 0.16),
-  0px 2px 1px rgba(46, 47, 66, 0.08);
+.list-service:hover 
+.overlay {
   transform: translateY(0%);
 }
 
 .portfolio-img-container {
  position: relative;
- position: relative;
+ max-width: 360;
+ width: 100;
  overflow: hidden;
 }
 
@@ -471,13 +474,14 @@ fill:var(--color-cloud)
 
 .overlay {
   position: absolute;
+  left: 0;
   top: 0;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color:var(--color-cloud);
   padding: 40px 32px;
-  background-color: #4d5ae5;
+  background-color: var(--color-iris);
   height: 100%;
   width: 100%;
   transform: translateY(100%);
@@ -529,6 +533,7 @@ fill:var(--color-cloud)
 
 .footer-content {
  margin-right: 120px;
+ text-align: left;
 }
 
 .text-footer {
