--- a/css/styles.css
+++ b/css/styles.css
@@ -446,8 +446,7 @@ fill:var(--color-cloud)
 
 .list-service {
   width: calc((100% - 48px) / 3);
-  /*box-sizing: border-box;*/
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+  transition:box-shadow 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16),
     0px 2px 1px rgba(46, 47, 66, 0.08);
 }
@@ -564,6 +563,7 @@ fill:var(--color-cloud)
 .list-social-media {
   width: 40px;
   height: 40px;
+  transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-media-item {
