--- a/css/styles.css
+++ b/css/styles.css
@@ -449,18 +449,23 @@ fill:var(--color-cloud)
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.list-service:hover {
- box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.2),
-  0px 3px 12px rgba(46, 47, 66, 0.3);
+.product-card {
+  display: block;
+  text-decoration: none;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.product-card:hover,
+.product-card:focus {
+  transform: translateY(0%);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
 .list-service:hover .overlay {
  transform: translateY(0);
 }
 
 .portfolio-img-container {
  position: relative;
- max-width: 360;
- width: 100;
  overflow: hidden;
 }
 
@@ -471,19 +476,22 @@ fill:var(--color-cloud)
 }
 
 .overlay {
-  position: absolute;
-  left: 0;
-  top: 0;
-  font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color:var(--color-cloud);
-  padding: 40px 32px;
-  background-color: var(--color-iris);
-  height: 100%;
-  width: 100%;
-  transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  position: absolute;
+  color: var(--color-cloud);
+  background-color: var(--color-iris);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  width: 100%;
+  height: 100%;
+  left: 0px;
+  top: 0px;
+  transform: translate(0, 100%);
+  padding: 40px 32px;
+  overflow: hidden;
 }
 
 .service-container {
@@ -562,7 +570,6 @@ fill:var(--color-cloud)
 .list-social-media {
   width: 40px;
   height: 40px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-media-item {
@@ -573,7 +580,9 @@ fill:var(--color-cloud)
   display: flex;
   align-items: center;
   justify-content: center;
-}
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
 
 .footer-media-item:hover,
 .footer-media-item:focus {
