--- a/css/styles.css
+++ b/css/styles.css
@@ -449,11 +449,12 @@ fill:var(--color-cloud)
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.product-card {
+/*.product-card {
   display: block;
   text-decoration: none;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+  }*/
+
 .product-card:hover,
 .product-card:focus {
   transform: translateY(0%);
