--- a/css/styles.css
+++ b/css/styles.css
@@ -455,8 +455,8 @@ fill:var(--color-cloud)
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }*/
 
-.product-card:hover,
-.product-card:focus {
+.list-service:hover,
+.list-service:focus {
   transform: translateY(0%);
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
