--- a/css/styles.css
+++ b/css/styles.css
@@ -292,7 +292,7 @@ ol {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: var(--color-slate);
-  /*width: calc((100% - 72px) / 4);
+  width: calc((100% - 72px) / 4);
   box-sizing: border-box;*/
   margin-bottom: 8px;
 }
@@ -307,6 +307,7 @@ ol {
 }
 
 .description-text {
+  font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
