--- a/css/styles.css
+++ b/css/styles.css
@@ -293,7 +293,7 @@ ol {
   letter-spacing: 0.02em;
   color: var(--color-slate);
   width: calc((100% - 72px) / 4);
-  box-sizing: border-box;
+  /*box-sizing: border-box;*/
   margin-bottom: 8px;
 }
 
