--- a/css/styles.css
+++ b/css/styles.css
@@ -95,6 +95,12 @@ ol {
 }
 
 .header-logo-part-dark {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
   color: var(--color-navy-blue);
 }
 
@@ -198,6 +204,7 @@ ol {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  margin: 0 auto;
 }
 
 .hero-tittle {
@@ -239,7 +246,9 @@ ol {
 }
 
 /*FIRST SECTION*/
-.section-container {}
+.section-container {
+
+}
 
 .container-icon{
   display: flex;
@@ -311,7 +320,6 @@ ol {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--color-slate);
-  margin-bottom: 8px;
 }
 
 /*SECOND SECTION*/
